DAY-02/step-01/front/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      imagePullSecrets:
        - name: takima-school-registry
      containers:
        - name: front
          image: registry.gitlab.com/takima-school/images/cdb/www:latest
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 101
            runAsGroup: 101
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
