DAY-02/step-01/front/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
