DAY-02/step-01/front/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: nginx
  name: front-ingress
spec:
  rules:
    - host: front.mathis-medard.takima.school
      http:
        paths:
          - backend:
              service:
                name: front-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - front.mathis-medard.takima.school
      secretName: front-tls
